# gnn-bench

./: CMakeLists.txt  README.md
src/: main.cpp  matrix.cpp  matrix.hpp
